--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +33,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
